# life-e2e-model

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: reproduce_table7.py
notebooks/: demo_quick.ipynb
src/life_e2e/: __init__.py  __main__.py  fiber_modes.py  m1_fiber_coupling.py  m2_throughput_chain.py  m3_null_error_propagation.py  m4_surface_sensitivity.py  material_properties.py  monte_carlo.py
tests/: conftest.py  test_regression.py
